<resources>
    <string name="app_name">Wide_Tech</string>
    <string name="title_home">Productos</string>
    <string name="title_dashboard">Contactenos</string>
    <string name="title_notifications">Perfil Usuario</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="edit_text_search">Buscar Productos</string>
    <string name="list_is_empty">Lista Vacia</string>
    <string name="btn_aceptar">Aceptar</string>
    <string name="informative">Informativo</string>
    <string name="detail_diaolog">Detalle de dialogo</string>
    <string name="btn_cancel">Cancelar</string>
    <string name="Internet">Internet</string>
    <string name="detail_falla_Internet">No tienes acceso a Internet</string>
    <string name="name">Name Products</string>
    <string name="name_contact">Nombre</string>
    <string name="mail_contact">Correo</string>
    <string name="phone_contact">Teléfono</string>
    <string name="title_contacts">Contactanos para ayudarte</string>
    <string name="location_actual">Ubicación Actual</string>
    <string name="last_name">Apellidos</string>
    <string name="id_profile">Identificación</string>
    <string name="btn_create">Crear</string>
    <string name="selection_image">Seleccionar Imagen</string>
    <string name="text_camera">Camara</string>
    <string name="text_gallery">Galeria</string>
    <string name="galery_deshabilite">El acceso a imagenes esta deshabilitado.¿Desea habilitarlos?</string>
    <string name="camera_deshabilite">Los permisos de la camara estan deshabilitado.¿Desea habilitarlos?</string>
</resources>
