<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_info_general"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/title_contacts"
        android:textAlignment="center"
        android:textColor="@color/verdePrimary"
        android:textSize="23sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_name_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/name_contact"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="@+id/et_name_contact"
        app:layout_constraintEnd_toStartOf="@+id/et_name_contact"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/et_name_contact" />

    <EditText
        android:id="@+id/et_name_contact"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/name_contact"
        android:inputType="text"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_name_contact"
        app:layout_constraintTop_toBottomOf="@+id/tv_info_general" />

    <TextView
        android:id="@+id/tv_mail_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/mail_contact"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="@+id/et_mail_contact"
        app:layout_constraintEnd_toStartOf="@+id/et_mail_contact"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/et_mail_contact" />

    <EditText
        android:id="@+id/et_mail_contact"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/prompt_email"
        android:inputType="textEmailAddress"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/et_name_contact"
        app:layout_constraintTop_toBottomOf="@+id/et_name_contact" />

    <TextView
        android:id="@+id/tv_phone_contact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:text="@string/phone_contact"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="@+id/et_phone_contact"
        app:layout_constraintEnd_toStartOf="@+id/et_phone_contact"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/et_phone_contact" />

    <EditText
        android:id="@+id/et_phone_contact"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:hint="@string/phone_contact"
        android:inputType="phone"
        android:selectAllOnFocus="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/et_mail_contact"
        app:layout_constraintTop_toBottomOf="@+id/et_mail_contact" />

    <Button
        android:id="@+id/btn_contact"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/btn_login"
        android:text="@string/title_dashboard"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/map_contact"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_phone_contact" />

    <com.google.android.gms.maps.MapView
        android:id="@+id/map_contact"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_contact" />

    <Button
        android:id="@+id/btn_location"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/btn_login"
        android:text="@string/location_actual"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/map_contact" />

</androidx.constraintlayout.widget.ConstraintLayout>