<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorPrimary">

    <ImageView
        android:id="@+id/ivIconOptionCam"
        android:layout_width="@dimen/dimen_203dp"
        android:layout_height="@dimen/dimen_203dp"
        android:layout_gravity="center"
        android:src="@drawable/ic_android_black_24dp" />

    <LinearLayout
        android:id="@+id/ll_upload_images"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_gravity="center">

        <Button
            android:id="@+id/btn_camera_option"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:drawableTop="@android:drawable/ic_menu_camera"
            android:gravity="center"
            android:text="@string/text_camera"
            android:textAlignment="gravity"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/btn_gallery_option"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/transparent"
            android:drawableTop="@android:drawable/ic_menu_gallery"
            android:gravity="center"
            android:text="@string/text_gallery"
            android:textAlignment="gravity"
            android:textColor="@android:color/white" />

    </LinearLayout>

    <Button
        android:id="@+id/btnCancelOption"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_56dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dimen_25dp"
        android:background="@drawable/btn_login"
        android:text="@string/btn_cancel"
        android:textSize="18sp"
        android:textColor="@android:color/white"/>
</LinearLayout>

